  [tool.poetry]
  name = "python-template"
  version = "0.1.0"
  description = ""
  authors = ["Your Name <you@example.com>"]
  
  [tool.poetry.dependencies]
  python = "^3.8"
  replit = "^3.2.4"
  urllib3 = "^1.26.12"
  selenium = "^4.0.0"
  bs4 = "^0.0.1"
  pandas = "^1.5.3"
  cassandra-driver = "^3.25.0"
  pymongo = "^4.3.3"
  psycopg2-binary = "^2.9.5"
  
  [tool.poetry.dev-dependencies]
  debugpy = "^1.6.2"
  replit-python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.9"}
  
  [build-system]
  requires = ["poetry-core>=1.0.0"]
  build-backend = "poetry.core.masonry.api"